# PII_Detection

./: .gitignore  Dockerfile  Notizen.md  README.md  Sachen_nicht_gefunden.json  docker-compose.yml  list_without_pii.json  pyproject.toml  requirements.txt  runs.md  whole_document.json  Änderungen.md
Data/: backup.txt
entity_description/: backup.yml  properties.yml  properties_old.yml
log/Output/: 001-126979.json  001-126979_positions.json
prompts/link/: link_location_to_person.xml
prompts/meta_prompting/examples/: example_generation_issue.md  example_generation_issue_backup.md  issues_example.md
prompts/meta_prompting/general/: meta_expert.md  next_instruction_meta.md  (+3 more)
prompts/prompt_config/: conversation_config.yml  generation_config.yml
prompts/prompt_improver/: prompt_improver.md
prompts/sammel/: ACHTUNG_SCHAU_give_feedback.md  example_generation.md  example_verifying_generation.md  extract_alias.xml  extract_alias_backup.xml  extract_codes.xml  extract_gender.md  extract_gender.xml  extract_health.xml  extract_location.xml  give_feedback.md  guidelines_for_extracting.md  guidelines_for_issue_solving.md  incorporate_feedback.md  meta_expert.md  next_step_meta.md  next_step_meta_issue.md  prompt_generation.md  prompt_issue_solving_generation.md  prompt_verifying_generation.md  recheck_wrong_found.xml
src/: __init__.py
src/cli/: cli_helper.py  main.py
src/evaluate/: prepare_evaluation.py
src/module/: entities.py  entity_designation.py  llm.py  llm_agents.py  llm_agents_static.py  logging_config.py  neo4j_conn.py  propositions.py  utils.py
(+26 files in other folders)
