[tool.poetry]
name = "llm text anonymization"
version = "0.1.0"
description = "Anonymization of Text"
authors = ["bbaumgartnerBX <141214085+bbaumgartnerBX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
loguru = "^0.7.3"
openai = "^1.61.0"
nest-asyncio = "^1.6.0"
neo4j = "^5.27.0"
asyncio = "^3.4.3"
pyyaml = "^6.0.2"
dotenv = "^0.9.9"
langsmith = "^0.4.12"
pandas = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
